# StackJoiner

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
src/: __init__.py  main.py
src/stackjoiner/: __init__.py  cf_tag.py  cli.py  stackjoiner.py  yaml_loader.py
src/stackjoiner/tests/: test_cloud_formation_formating.py  test_load_nested_template.py  test_load_template.py
src/stackjoiner/tests/resources/: single_nested_template.yaml  single_template.yaml
